2009-03-20
Made a $GLOBALS['watched'] and $GLOBALS['ignored'] to minimize the amount of watch queries, this is not used everywhere

2009-03-12
Found out changing the Filepath and TEXT fields to BLOB didn't help the filepath checking of ascii names

2009-03-11
Changed db_file::cleanup() to use LEFT and LOCATE instead of REGEXP
Made masive progress on reports.php admin script
Fixed unicode problem by changing the TEXT columns in the database to BLOB, now binary text is preserved


2009-03-10
Fixed some searching and sorting problems in the db_files module
Fixed the fs_module::out() methods to work with new convention
Made db_playlist use standard db_file search functionality
Fixed some problems with accessing the ignored and watched files since db_file module regexp changes

2009-03-09
Made searched terms highlight on select page
Worked on db_file module and fixed some search functionality

2009-03-06
Fixed zip template, crc() can work with a file pointer, still working on bt.php plugin which uses md5
Improved searching capabilities in db_file

2009-03-04
Worked on db_playlist module, mostly working just needs some tweaks

2009-03-03
Added db_alias module to handle the aliases, although it is semi-incomplete
module::out() methods can only remove header declarations, they cannot set them, that is controlled by the plugin that calls it
Cron now doesn't clean or scan when a directory is unmounted or missing
Site now completely directory separator independant, it stores all files with / in between directories and all system calls replace the / with DIRECTORY_SEPARATOR

2009-03-02
Made cleanup more efficient by creating a THREASHOLD constant for how many times the cron should run before cleaning up
Also cleanup will fire when physical directories are changed and it is detected by the db_watch_list module, so they will no longer clean up when just adding new files to database